# warre

./: .coveragerc  .gitignore  .gitreview  .pre-commit-config.yaml  .stestr.conf  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
etc/warre/: config-generator.conf  policy-generator.conf
warre/: __init__.py  app.py  exceptions.py  extensions.py  manager.py  models.py  policy.py  quota.py  version.py  wsgi.py
warre/api/v1/: __init__.py
warre/cmd/: api.py  manage.py  notification.py  worker.py
warre/common/: blazar.py  clients.py  config.py  exceptions.py  flycheck_config.py  keystone.py  notifications.py  policies.py  rpc.py  service.py  utils.py
warre/migrations/: env.py  script.py.mako
warre/migrations/versions/: 147fc7ff582d_initial_migration.py  17a247d2d32e_add_status.py  26497add4de7_add_compute_flavor_to_reservation.py  2de2c31ac6e2_add_ephemeral_gb_to_flavor.py  35ef7858714d_add_flavor_start_and_end.py  40707202a51b_add_instance_count_to_reservation.py  43d884ebc331_add_zone_and_category_to_flavor.py  56280d4f9db9_flavorproject_id_to_uuid.py  6821e37ce4e2_initial_add.py  732414abd491_add_error_reason_to_reservation.py  a1b2c3d4e5f6_add_maintenance_window.py  b4a78f028f92_add_status_reason_to_reservation.py  (+2 more)
warre/notification/: consumer.py  endpoints.py  user.py
warre/templates/: base.tmpl  before_end.tmpl  create.tmpl  end.tmpl  start.tmpl
warre/tests/etc/: warre.conf
warre/worker/: api.py  consumer.py  endpoints.py  manager.py  periodic.py
(+27 files in other folders)
