[metadata]
name = warre
author = ARDC Nectar Cloud Services
author_email = coreservices@ardc.edu.au
license = Apache-2.0
summary = Nectar Reservation System
description_file =
    README.md
description_content_type = text/markdown
keywords = warre
home_page = https://github.com/NeCTAR-RC/warre
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.12

[files]
packages = warre
include_package_data = True

[entry_points]
console_scripts =
    warre-api = warre.cmd.api:main
    warre-notification = warre.cmd.notification:main
    warre-worker = warre.cmd.worker:main
    warre-manage = warre.cmd.manage:cli

warre.user.notifier =
    logging = warre.notification.user:LoggingNotifier
    taynac = warre.notification.user:TaynacNotifier

oslo.config.opts =
    warre = warre.common.config:list_opts
oslo.policy.policies =
    warre = warre.common.policies:list_rules
oslo.policy.enforcer =
    warre = warre.policy:get_enforcer

[pbr]
skip_changelog=true
skip_authors=true
